Revision history for Text-Names-GB

0.02
	Added support for Kai

0.01	Thu Jul 20 09:55:08 EDT 2017
	Initial Draft