@@ -2,6 +2,7 @@ Revision history for Text-Names-GB
 
 0.02
 	Added support for Kai
+	Added dependency on Text::Names
 
 0.01	Thu Jul 20 09:55:08 EDT 2017
 	Initial Draft
